[package]
name = "yolov9_onnx_test"
version = "0.1.0"
edition = "2024"

[lib]
name = "yolov9_onnx_test_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.6"
ort = "1.16.0"
ndarray = "0.15.6"    # ort 1.16.0 compatible
anyhow = "1.0.98"
imageproc = "0.25.0"
rusttype = "0.9.3"
eframe = "0.32.0"
egui = "0.32.0"
rfd = "0.15.4"
include_dir = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
