[package]
name = "vision_model_tester"
version = "0.1.0"
edition = "2024"

[lib]
name = "vision_model_tester_lib"
crate-type = ["cdylib", "rlib"]

[dependencies]
image = "0.25.6"
ort = "1.16.0"
ndarray = "0.15.6"    # ort 1.16.0과 호환되는 버전
anyhow = "1.0.99"
imageproc = "0.25.0"
rusttype = "0.9.3"
eframe = "0.32.0"
egui = "0.32.0"
rfd = "0.15.4"
include_dir = "0.7.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
sha2 = "0.10"
thiserror = "2.0.14"
once_cell = "1.19"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
